# SilverOak-Automation-Website

./: .gitignore
backend/apa/: apa_process.py  config.yaml  helper.py  main.py  pyproject.toml  requirements.txt  schema.json  table.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  Layout.css  Layout.jsx
frontend/src/api/: api.js
frontend/src/components/: Navbar.css  Navbar.jsx
frontend/src/components/upload/: DropdownField.jsx  FileUpload.jsx  PrioritySelector.jsx
frontend/src/data/: documentCategories.js  documentTypes.js  formTypes.js  priorities.js  sourceSystems.js
frontend/src/pages/: Dashboard.jsx  Home.jsx  Results.jsx  Upload.jsx
